# grublist-rust

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  FEATURES.md  LICENSE-APACHE  LICENSE-MIT  PUBLISH.md  README.md
src/: backup_manager.rs  boot_time.rs  colorprint.rs  custom_names.rs  grub.rs  grub_config.rs  grub_validate.rs  interaction.rs  kernel_cleanup.rs  kernel_info.rs  main.rs
