[package]
name = "grublist"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust implementation of grub selection tool with interactive menu interface"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/grublist-rust"
keywords = ["grub", "boot", "kernel", "menu", "interactive"]
categories = ["command-line-utilities", "system"]
readme = "README.md"

[[bin]]
name = "grublist"
path = "src/main.rs"

[dependencies]
regex = "1.10"
termion = "2.0"

