[package]
name = "grublist"
version = "0.1.1"
edition = "2021"
authors = ["Benshan Mei <mbs2021@163.com>"]
description = "A Rust implementation of grub selection tool with interactive menu interface"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mbs0221/grublist-rust"
keywords = ["grub", "boot", "kernel", "menu", "interactive"]
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "grublist"
path = "src/main.rs"

[dependencies]
regex = "1.10"
termion = "2.0"

