[package]
name = "grublist"
version = "0.2.0"
edition = "2021"
authors = ["Benshan Mei <mbs2021@163.com>"]
description = "A Rust implementation of grub selection tool with interactive menu interface"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mbs0221/grublist-rust"
keywords = ["grub", "boot", "kernel", "menu", "interactive"]
categories = ["command-line-utilities"]
readme = "README.md"

[[bin]]
name = "grublist"
path = "src/main.rs"

[dependencies]
regex = "1.10"
ratatui = "0.27"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

